--- a/Triliza/index.html
+++ b/Triliza/index.html
@@ -35,6 +35,11 @@
 
 <br/><br/>
 
+	<div id='chat'>
+		<div id='outputchat'>
+		</div>
+		<input id='msg'>
+	</div>
 
 <button id='reset' class='btn btn-primary'>ΕΝΑΡΞΗ/RESET</button><br>
 
