--- a/Triliza/index.html
+++ b/Triliza/index.html
@@ -35,14 +35,14 @@
 
 <br/><br/>
 
-	<div id='chat'>
-		<div id='outputchat'>
-		</div>
-		<input id='msg'>
-	</div>
 
 <button id='reset' class='btn btn-primary'>ΕΝΑΡΞΗ/RESET</button><br>
 
+	<div id='chat'>
+		<div id='outputchat'>
+		</div>
+		<input id='msg'><input type="button" id='msgbtn' value="sent">
+	</div>
 
 </body>
 </html>
