--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>ΑΔΙΣΕ: Τριλιζα</title>
+    <title>Τριλιζα</title>
 
+    <!-- Bootstrap core CSS -->
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="css/my_ttt.css" rel="stylesheet">
+	<link href="css/mytriliza.css" rel="stylesheet">
 	<script src="bootstrap/jquery-3.2.1.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
-	<script src="js/my_ttt.js"></script>
-    <script src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
-	<link href="jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet">
-    
+	<script src="js/mytriliza.js"></script>
   </head>
 <body>
 <h1>Τριλιζα</h1>
@@ -23,16 +21,28 @@
 <br/>
 <div id='game_initializer'>
 <input id='username'> 
-
+<select id='piece'>
+<option value='X'>X</option>
+<option value='O'>O</option>
+</select>
 <button id='login' class='btn btn-primary'>ΕΙΣΟΔΟΣ ΣΤΟ ΠΑΙΧΝΙΔΙ</button><br>
 </div>
 <div id='game_info'>
 </div>
+<div id='move_div'>
+Δώσε κίνηση (x y): <input id='the_move'>  <button id='do_move' class='btn btn-primary'>ΚΑΝΕ ΤΗΝ ΚΙΝΗΣΗ</button><br>
+</div>
+
 <br/><br/>
 
 
 <button id='reset' class='btn btn-primary'>ΕΝΑΡΞΗ/RESET</button><br>
 
+	<div id='chat'>
+		<div id='outputchat'>
+		</div>
+		<input id='msg'><input type="button" id='msgbtn' value="sent">
+	</div>
 
 </body>
 </html>
