add rematch kai fix sto lathos

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 
 <button id='reset' class='btn btn-primary'>ΕΝΑΡΞΗ/RESET</button><br>
+<button id='rematch' class='btn btn-primary'>REMATCH</button><br>	
 
 	<div id='chat'>
 		<div id='outputchat'>
